src/test/ui/panic-runtime/needs-gate.stderr
error[E0658]: the `#[panic_runtime]` attribute is an experimental feature
  --> $DIR/needs-gate.rs:4:1
   |
LL | #![panic_runtime]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/32837
   = help: add #![feature(panic_runtime)] to the crate attributes to enable

error[E0658]: the `#[needs_panic_runtime]` attribute is an experimental feature
  --> $DIR/needs-gate.rs:5:1
   |
LL | #![needs_panic_runtime]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/32837
   = help: add #![feature(needs_panic_runtime)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
